deployment_yamls/api_canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
   matchLabels:
    app: api
  template:
    metadata:
      labels:
        app: api
        version: v2
    spec:
      containers:
      - imagePullPolicy: Always
        image: devoteam1/devoteam:canary
        name: api
        ports:
        - containerPort: 8081
      restartPolicy: Always
status: {}
